# jandax

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
jandax/: __init__.py  core.py  pytree.py  utils.py
tests/: conftest.py  test_arithmetic.py  test_groupby_rank.py  test_jaxdf.py  test_pandas_compatibility.py
