[project]
name = "jandax"
version = "0.1.0"
description = "JAX-based DataFrame implementation"
requires-python = ">=3.8"
dependencies = [
    "jax",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "ruff",
]

[tool.ruff]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "PL",  # pylint
]
ignore = []
target-version = "py38"
line-length = 88

[tool.ruff.lint.isort]
known-first-party = ["jandax"]